--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
             <version>1.5.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>j2ep-proxy-${project.version}</finalName>
